# ai-prompt-tool

./: .gitignore  Makefile  package.json  pnpm-lock.yaml
docs/: changes.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: langfuse.rs  lib.rs  main.rs
src/data/: promptCraftData.ts
src/services/: langfuse.ts  promptStorage.ts  workspaceStorage.ts
src/types/: prompt.ts
