[package]
name = "promptcraft"
version = "0.1.0"
description = "PromptCraft desktop prompt management tool"
authors = ["xierui"]
edition = "2021"

[lib]
name = "promptcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
